<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Galagala</string>
    <string name="titleHomePage">Home Page</string>
    <string name="titleCategory">Categories</string>
    <string name="titleBrand">Brand</string>
    <string name="titleFavor">Wishlist</string>
    <string name="titleProfile">Profile</string>
    <string name="titleLogin">Login</string>
    <string name="titleRegister">Sign Up</string>
    <string name="titleHelp">Help</string>
    <string name="titleLang">Language</string>
    <string name="titleTerm">Terms Of Usage</string>
    <string name="titleSercurity">Private Policy</string>
    <string name="titleSearch">Search</string>
    <string name="langVietNam">Vietnamese</string>
    <string name="langEngland">English</string>
    <string name="langChina">Chinese</string>
    <string name="leftMenuCart">Cart</string>
    <string name="leftMenuVat">VAT tax included in price</string>
    <string name="homepageShopCate">Shop by Categories</string>
    <string name="homepageViewMore">View More</string>
    <string name="homepageViewAll">View All</string>
    <string name="homepageCollapse">Collapse</string>
    <string name="homepageTopSell">Top Selling Product</string>
    <string name="homepageTopBrand">Top Brand</string>
    <string name="homepageNewArrival">New Arrival</string>
    <string name="homepageStore">Store</string>
    <string name="loginEmail">Email</string>
    <string name="loginPass">Password</string>
    <string name="loginNotReg">You don\'t have account?</string>
    <string name="loginForgotPass">Forgot password?</string>
    <string name="actionBarSearchProduct">Search products...</string>
    <string name="OSD_please_wait">Loading. Please wait a moment.</string>
    <string name="OSD_network_disconnect">Please make sure your Network Connection is ON.</string>
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

</resources>