<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/titleLogin"
        android:textColor="@color/bg_layout_title"
        android:textSize="18dp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:layout_marginLeft="@dimen/straight_line_margin"
        android:layout_marginRight="@dimen/straight_line_margin"
        android:src="@drawable/straight_line_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/straight_line_margin"
        android:layout_marginRight="@dimen/straight_line_margin"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loginEmail"
            android:textColor="@color/bg_layout_title"
            android:textSize="@dimen/textview_name_size_left" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:background="@color/bg_input_login"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tvPass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/loginPass"
            android:textColor="@color/bg_layout_title"
            android:textSize="@dimen/textview_name_size_left" />

        <EditText
            android:id="@+id/inputPass"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="5dp"
            android:background="@color/bg_input_login"
            android:inputType="text|textVisiblePassword"
            android:textSize="16dp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_item_title_size"
        android:layout_marginLeft="@dimen/straight_line_margin"
        android:layout_marginRight="@dimen/straight_line_margin"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvNotReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/textview_name_margin_left"
            android:gravity="start"
            android:text="@string/loginNotReg"
            android:textColor="@color/blue"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tvForgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/textview_name_margin_right"
            android:text="@string/loginForgotPass"
            android:textColor="@color/blue"
            android:textSize="13dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/straight_line_margin"
        android:layout_marginRight="@dimen/straight_line_margin"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/bg_layout_title"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="16dp" />

    </RelativeLayout>

</LinearLayout>